Sun Jun 26 21:05:03 2005                        Michael Jennings (mej)

Attempt to fix autogen.sh for Gentoo and Solaris.

Detect and avoid E 0.17 faking E 0.16.x's IPC mechanisms.
----------------------------------------------------------------------
Tue Aug 16 10:48:12 2005                        Michael Jennings (mej)

Applied a fix from benny@sweetfactory.org for a typo in keysym
handling.

Fixed percent signs in menu files thanks to Yasufumi Haga
<yasufumi.haga@nifty.com>.

Fixed E IPC version check to work with old and new schemes.
----------------------------------------------------------------------
Thu Sep  1 02:12:29 2005                        Michael Jennings (mej)

Fix abort stuff.
----------------------------------------------------------------------
Thu Sep  1 02:16:17 2005                        Michael Jennings (mej)

Fix but disable vt100 answerbacks.
----------------------------------------------------------------------
Thu Sep 15 21:55:34 2005                        Michael Jennings (mej)

Support NetWM startup ID's.
----------------------------------------------------------------------
Wed Oct  5 14:41:00 2005                        Michael Jennings (mej)

Fixed an incredibly-difficult-to-track-down missing "break" statement
which caused the "New..." and Ctrl-T functionality to fail to prompt
for a tab name.
----------------------------------------------------------------------
Mon Dec  5 15:46:34 2005                        Michael Jennings (mej)

Prevent firewall bounces from trying for the same port.
----------------------------------------------------------------------
Thu Dec 22 18:32:31 2005                        Michael Jennings (mej)

Cleanups and minor enhancements.
----------------------------------------------------------------------
Wed Jan  4 03:44:04 2006                        Michael Jennings (mej)

X resource tracking/debugging support.
----------------------------------------------------------------------